# gcmt3d

./: .gitignore  README.md  devinstall.sh  environment.yml  genindex.html  index.html  keep-these.txt  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
_modules/: index.html
_modules/lwsspy/seismo/: source.html
_modules/lwsspy/seismo/process/: process.html  rotate.html
_modules/lwsspy/seismo/specfem/: plot_csv_depth_slice.html  plot_specfem_xsec_depth.html  read_specfem_xsec_depth.html
chapters/: functions.html  seismology.html
docs/: conf.py  index.rst
docs/chapters/api/: api.rst  index.rst
docs/chapters/figures/scripts/: cmts_on_slabs.py  compare_catalogs.py  damping.py  gcmt_figures.py  gcmtworkflowfigures.py  intro_figure.py  outlierplots.py  station_map.py  weights.py
docs/chapters/figures/scripts/data/: C201811012219A_weights.pkl  gcmt.pkl  gcmt3d+_fix.pkl  scaling.txt  scaling_depth.txt
docs/chapters/gcmt3d/: gcmt3d.rst  index.rst
docs/chapters/introduction/: introduction.md
docs/chapters/overview/: index.rst  installation.rst  introduction.rst  results.rst
docs/source/: conf.py  index.rst
docs/source/chapters/: functions.rst
scripts/: checkeventsfordata.sh  checkifactuallydone.sh  checkifdone.sh  create_downloaddir.sh  create_invdir.sh  remove_notdone_from_submission.sh  remove_unfinished_inversions.sh
scripts/data/: catalog_params.yml  download_data.sh  input.yml  invert_chunky_job.lsf  invertcmt.lsf
src/lwsspy/gcmt3d/: GCMT3DInversion.py  M0.py  __init__.py  catalog_gui.py  check_submission.py  get_optimization_stats.py  input.yml  io.py  measurements.py  plot_inversion_distributions.py  plot_measurements.py  plot_output_traces.py  plot_slab_cmts.py  plot_slab_location.py  plot_weights.py  process_classifier.py  sync_data.py  test_depth_optimization.py  window.body.yml  write_catalog.py
src/lwsspy/gcmt3d/ioi/: C122604A  constants.py  cost.py  data.py  descent.py  download.py  forward.py  forward_bu.py  get_data.py  gradient.py  hessian.py  input.yml  inversion.py  kernel.py  linesearch.py  log.py  metadata.py  model.py  opt.py  optimization.py  plot.py  processing.py  utils.py  weighting.py
src/lwsspy/gcmt3d/ioi/entk/: inversion.py
src/lwsspy/gcmt3d/ioi/functions/: cost.py  descent.py  events.py  forward.py  get_data.py  get_data_mpi.py  gradient.py  kernel.py  linesearch.py  log.py  model.py  opt.py  plot.py  processing.py  utils.py  weighting.py
src/lwsspy/gcmt3d/ioi/nnodes/: config.toml  download.py  inversion.py  source.py
src/lwsspy/gcmt3d/ioi/nnodes_download/: config.toml  source.py
tests/: test_process_classifier.py
workflows/nnodes/download/: config.toml  source.py
workflows/nnodes/download_dtn/: config.toml  download.batch  job.batch
workflows/nnodes/inversion_mt/: config.toml  job.bash
workflows/nnodes/inversion_mt_summit/: config.toml  job.bash  job.lsf
