[metadata]
# replace with your username:
name = lwsspy.gcmt3d
version = 0.0.2
author = Lucas Sawade
author_email = lsawade@princeton.edu
description = Function for the Global Centroid Moment Tensor Inversion
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = lsawade@princeton.edu
url = https://github.com/lsawade/lwsspy.gcmt3d
project_urls =
    Documentation = https://lwsspy.github.io/lwsspy.gcmt3d
    TravisCI = https://travis-ci.com/github/lwsspy.gcmt3d
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Seismology, Programming, Moment Tensor, CMT

[options]
namespace_packages = lwsspy
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.6
install_requires =  
    numpy
    matplotlib
    obspy
    autopep8
    cartopy
    lwsspy
    lwsspy.seismo
    pyarrow
    pandas
test_suite= tests
tests_require = pytest
zip_safe = False

[options.package_data]
lwsspy.gcmt3d = 
    process.yml
    input.yml
    window.body.yml

[options.extras_require]
docs = 
    sphinx
    numpydoc
    sphinx_book_theme
tests = 
    pytest
    py

[options.entry_points]
console_scripts =
    gcmt3d-check-submission = lwsspy.gcmt3d.check_submission:bin
    gcmt3d-fix-dlna-database=lwsspy.gcmt3d.M0:bin_fix_dlna_database
    gcmt3d-fix-dlna-event=lwsspy.gcmt3d.M0:bin_fix_event
    gcmt3d-invert = lwsspy.gcmt3d.GCMT3DInversion:bin
    gcmt3d-optimstats = lwsspy.gcmt3d.get_optimization_stats:bin
    gcmt3d-plot-measurement-histograms=lwsspy.gcmt3d.plot_measurements:bin
    gcmt3d-plot-measurement-histograms-pkl=lwsspy.gcmt3d.plot_measurements:bin_plot_pickles
    gcmt3d-process-final = lwsspy.gcmt3d.GCMT3DInversion:bin_process_final
    gcmt3d-syncdata = lwsspy.gcmt3d.sync_data:bin
    gcmt3d-write-filtered-cat = lwsspy.gcmt3d.write_catalog:bin
    gcmt3d-create-measurement-summary = lwsspy.gcmt3d.measurements:bin_summary

[options.packages.find]
where = src