[metadata]
# replace with your username:
name = lwsspy.gcmt3d
version = 0.0.3
author = Lucas Sawade
author_email = lsawade@princeton.edu
description = Function for the Global Centroid Moment Tensor Inversion
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = lsawade@princeton.edu
url = https://github.com/lsawade/lwsspy.gcmt3d
project_urls =
    Documentation = https://lwsspy.github.io/lwsspy.gcmt3d
    TravisCI = https://travis-ci.com/github/lwsspy.gcmt3d
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Seismology, Programming, Moment Tensor, CMT

[options]
namespace_packages = lwsspy
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.6
install_requires =  
    numpy
    matplotlib
    obspy
    autopep8
    cartopy
    lwsspy
    lwsspy.seismo
    pandas
test_suite= tests
tests_require = pytest
zip_safe = False

[options.package_data]
lwsspy.gcmt3d = 
    process.yml
    input.yml
    window.body.yml

[options.extras_require]
docs = 
    sphinx
    numpydoc
    sphinx_book_theme
tests = 
    pytest
    py

[options.entry_points]
console_scripts =
    gcmt3d-check-submission = lwsspy.gcmt3d.check_submission:bin
    gcmt3d-fix-dlna-database=lwsspy.gcmt3d.M0:bin_fix_dlna_database
    gcmt3d-fix-dlna-event=lwsspy.gcmt3d.M0:bin_fix_event
    gcmt3d-invert = lwsspy.gcmt3d.GCMT3DInversion:bin
    gcmt3d-optimstats = lwsspy.gcmt3d.get_optimization_stats:bin
    gcmt3d-plot-measurement-histograms=lwsspy.gcmt3d.plot_measurements:bin
    gcmt3d-plot-measurement-histograms-pkl=lwsspy.gcmt3d.plot_measurements:bin_plot_pickles
    gcmt3d-process-final = lwsspy.gcmt3d.GCMT3DInversion:bin_process_final
    gcmt3d-syncdata = lwsspy.gcmt3d.sync_data:bin
    gcmt3d-write-filtered-cat = lwsspy.gcmt3d.write_catalog:bin
    gcmt3d-create-measurement-summary = lwsspy.gcmt3d.measurements:bin_summary
    gcmt3d-add-events = lwsspy.gcmt3d.ioi.bin.add_events:bin
    gcmt3d-check-events = lwsspy.gcmt3d.ioi.bin.check_events:bin
    gcmt3d-check-events-todo = lwsspy.gcmt3d.ioi.bin.check_events_todo:bin
    gcmt3d-check-events-todownload = lwsspy.gcmt3d.ioi.bin.check_events_todownload:bin
    gcmt3d-create-event-dir = lwsspy.gcmt3d.ioi.bin.create_event_dir:bin
    gcmt3d-create-inv-dir = lwsspy.gcmt3d.ioi.bin.create_inversion_dir:bin
    gcmt3d-get-data = lwsspy.gcmt3d.ioi.bin.get_data:bin
    gcmt3d-get-data-mpi = lwsspy.gcmt3d.ioi.bin.get_data_mpi:bin
    gcmt3d-plot-wave = lwsspy.gcmt3d.ioi.bin.print_wavetype:bin
    gcmt3d-print-cost = lwsspy.gcmt3d.ioi.bin.print_cost:bin
    gcmt3d-print-model = lwsspy.gcmt3d.ioi.bin.print_model:bin
    gcmt3d-print-model-names = lwsspy.gcmt3d.ioi.bin.print_model_names:bin
    gcmt3d-print-optvals = lwsspy.gcmt3d.ioi.bin.print_optvals:bin
    gcmt3d-print-status = lwsspy.gcmt3d.ioi.bin.print_status:bin

    # ioi-get-data = lwsspy.gcmt3d.ioi.get_data:bin
    # ioi-get-eventname = lwsspy.gcmt3d.ioi.bin.get_eventname:bin



[options.packages.find]
where = src